added hashcode and equals methods to domain classes, and tests for these